<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rehab_CoachV1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>

    <color name="activity1">#add8e6</color>

    <string name="plan_activity">Plan an Activity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_section1"></string>
    <string name="title_section2">X</string>
    <string name="title_section3">X X</string>
    <string name="remember">Did you remember to:</string>

    <drawable name="activity_divider">#000000</drawable>

    <string name="title">Welcome to Rehab Coach</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login">Login</string>
    <string name="start_activity">Start Activity</string>
    <string name="title_activity_during">DuringActivity</string>
    <string name="during_activity">This screen will be shown while an activity is going on</string>
    <string name="end_activity">End Activity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="review">How did it go?</string>
    <string name="return_home">Return to Home Screen</string>
    <string name="rating">Enter a number 1-10</string>
    <string name="title_section4">X X X</string>
    <string name="title_section5">X X X X</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="change_theme">Change theme</string>
    <string name="help_screen">Help</string>
    <string name="home_screen">Home</string>
    <string name="profile">Profile</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="view_goals">View Goals</string>
    <string name="change_password">Change Password</string>
    <string name="change_contact_info">Change Contact Information</string>
    <string name="change_emergency_contact">Edit Emergency Contact</string>
    <string name="help_message">What do you need help with?</string>
    <string name="find_transportation">Find Transportation</string>
    <string name="lost">I\'m lost</string>
    <string name="emergency_contact">I need my Emergency Contact</string>
    <string name="call_911">Call 911</string>
    <string name="title_activity_transportation">TransportationActivity</string>
    <string name="title_activity_lost">LostActivity</string>
    <string name="title_activity_emergency_contact">EmergencyContactActivity</string>
    <string name="bus">Find nearest bus route</string>
    <string name="taxi">Call Taxi</string>
    <string name="home_title">Activities</string>
    <string name="lost_title">You Are Here</string>
    <string name="profile_title">Profile</string>
    <string name="transportation_title">Do you need helping finding transportation?</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="create_patient">Create New Profile</string>
    <string name="impairments">Add/Remove Impairments</string>
    <string name="activities">Add/Remove Activities</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
	<string name="disability1">Spinal Cord Injury</string>
    <string name="disability2">Deaf</string>
    <string name="disability3">Blind</string>
    <string name="disability4">Wheelchair</string>
    
</resources>
