<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   <LinearLayout
       android:orientation="vertical" 
       android:id="@+id/line"
   	   android:layout_width="match_parent"
   	   android:layout_height="match_parent"
   	   android:layout_below="@+id/title"
   	   android:layout_alignParentBottom="true" >
    
   <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/profile_test" />
        
    <Button 
        android:id="@+id/view_goals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/view_goals"
        />
        
    <Button 
        android:id="@+id/change_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_password"
        />
        
    <Button 
        android:id="@+id/change_contact_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_contact_info"
        />
        
    <Button 
        android:id="@+id/change_emergency_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_emergency_contact"
        />

</LinearLayout> 

</RelativeLayout>
