<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    <ImageView
        android:id="@+id/osumclogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/osumclogo_invert" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/osumclogo"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
         <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:src="@drawable/blocko_invert" />

     <LinearLayout
         android:id="@+id/line"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/imageView1"         
         android:layout_centerHorizontal="true"
         android:orientation="vertical" >
         
     <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/username_hint"
        android:nextFocusDown="@+id/password" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
         />    
    
     </LinearLayout>

<LinearLayout
    android:id="@+id/buttons_line"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true" >
    
     <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_weight="1.0"
       	android:layout_marginTop="30dp"
        android:text="@string/login"
        android:onClick="loginToApp" />
     
   	<Button
        android:id="@+id/filler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
		android:layout_weight="1.0"
		android:visibility="invisible" />
   	
	<Button
        android:id="@+id/changetheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:layout_marginTop="30dp"
        android:text="@string/change_theme"
        android:onClick="changetheme" />
        
</LinearLayout>



     
</RelativeLayout>